# Kookmin-Biscuit-Ciphers

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  build-linux.sh  embeded.md  memcpy.c  test_openssl_provider.c
.CMake/: toolchain_arm64.cmake
KBC_gui/: KBC_gui.pro  qt_api.h  widget.cpp  widget.h  widget.ui
apps/: api.h  main.c  openKBC.c
provider/: KBC_aes.c  KBCprov.c
src/: CMakeLists.txt
src/aes/: CMakeLists.txt  aes mode operation.c  aes.c  aes.h  aes128.c
src/aria/: CMakeLists.txt  aria.c  aria.h
src/chacha20/: CMakeLists.txt  chacha20.c  chacha20.h  chacha20.md
src/lea/: CMakeLists.txt  lea.c  lea.h
src/mode/: CBC.c  CBC.h  CMakeLists.txt  CTR.c  CTR.h  ECB.c  ECB.h  cpy_test.cpp
src/padding/: CMakeLists.txt  iso9797m2.c  iso9797m2.h  pkcs7.c  pkcs7.h
src/pipo/: CMakeLists.txt  pipo.c  pipo.h
src/pkcs11/: pkcs11.c  pkcs11.h
src/rsa/: CMakeLists.txt  rsa2048.c  rsa2048.h
src/seed/: CMakeLists.txt  seed.c  seed.h
src/tdes/: CMakeLists.txt  tdes.c  tdes.h
test/: AES-keyexpansion-test.c  AES-test.c  AES128-test.c  ARIA-test.c  CBC-test.c  CMakeLists.txt  CTR-test.c  ChaCha-Block-test.c  ChaCha-Encryption-test.c  ChaCha-Quarter-Round-test.c  DES-test.c  ECB-test.c  LEA-test.c  PIPO-test.c  RSA2048-test.c  SEED-test.c  TDEA-test.c  iso9797m2-test.c  pkcs7-test.c
test/AES-KAT/: CMakeLists.txt  MCT-CBC.c  MCT-ECB.c
test/TDEA-KAT/: CMakeLists.txt  README.md  TCTRMMT3.rsp  cbc_mct_parity_test.c  cbc_mct_test.c  cbc_mmt_test.c  ctr_mmt_test.c  ecb_mct_parity_test.c  ecb_mct_test.c  ecb_mmt_test.c  readme (2).md
