include_directories(../src/aes/ ../src/pipo/ ../src/padding ../src/mode)
add_executable(aes_test ../src/aes/aes128.c AES128-test.c)
add_executable(pipo_test ../src/pipo/pipo.c PIPO-test.c)
add_executable(padding_test ../src/padding/pkcs7.c pkcs7-test.c)
add_executable(ECB_test ../src/padding/pkcs7.c ../src/aes/aes128.c ../src/mode/ECB.c ECB-test.c)
add_executable(CBC_test ../src/padding/pkcs7.c ../src/aes/aes128.c ../src/mode/CBC.c CBC-test.c)