include_directories(../src/aes/ ../src/pipo/ ../src/lea ../src/seed ../src/aria ../src/chacha20 ../src/rsa ../src/padding ../src/mode)

add_executable(AES-KEY-EXPANSION-TEST AES-keyexpansion-test.c)

add_executable(aes_test ../src/aes/aes.c AES-test.c)
add_executable(pipo_test ../src/pipo/pipo.c PIPO-test.c)
add_executable(lea_test ../src/lea/lea.c LEA-test.c)
add_executable(seed_test ../src/seed/seed.c SEED-test.c)
add_executable(aria_test ../src/aria/aria.c ARIA-test.c)
add_executable(chacha_quarter_round_test ../src/chacha20/chacha20.c ChaCha-Quarter-Round-test.c)
add_executable(chacha_block_test ../src/chacha20/chacha20.c ChaCha-Block-test.c)
add_executable(chacha_encrypt_test ../src/chacha20/chacha20.c ChaCha-Encryption-test.c)
option(USE_OPENSSL "Use OpenSSL for encryption" ON)
if(USE_OPENSSL)
    find_package(OpenSSL REQUIRED)
    add_executable(rsa2048_test ../src/rsa/rsa2048.c RSA2048-test.c)
    target_link_libraries(rsa2048_test PUBLIC ${OPENSSL_LIBRARIES})
endif()
add_executable(padding_test ../src/padding/pkcs7.c pkcs7-test.c)
add_executable(ECB_test ../src/padding/pkcs7.c ../src/aes/aes.c ../src/mode/ECB.c ECB-test.c)
add_executable(CBC_test ../src/padding/pkcs7.c ../src/aes/aes.c ../src/mode/CBC.c CBC-test.c)
add_executable(CTR_test ../src/padding/pkcs7.c ../src/aes/aes.c ../src/mode/CTR.c CTR-test.c)