cmake_minimum_required(VERSION 3.10)

project(nif_aes LANGUAGES C)

add_executable(ecb_mct_test MCT_ECB.c aes.c)
add_executable(cbc_mct_test MCT_CBC.c aes.c)

# 원본 파일의 경로
# set(ORIGINAL_FILE_PATH "TECBMMT3.rsp")
# set(ORIGINAL_FILE_PATH2 "TCBCMMT3.rsp")
# set(ORIGINAL_FILE_PATH3 "TCTRMMT3.rsp")

# set(ORIGINAL_FILE_PATH4 "TECBMonte3.rsp")
# set(ORIGINAL_FILE_PATH5 "TCBCMonte3.rsp")

# # 복사할 파일의 경로
# set(COPIED_FILE_PATH "./")

# # 파일 복사
# file(COPY ${ORIGINAL_FILE_PATH} DESTINATION ${COPIED_FILE_PATH})
# file(COPY ${ORIGINAL_FILE_PATH2} DESTINATION ${COPIED_FILE_PATH})
# file(COPY ${ORIGINAL_FILE_PATH3} DESTINATION ${COPIED_FILE_PATH})

# file(COPY ${ORIGINAL_FILE_PATH4} DESTINATION ${COPIED_FILE_PATH})
# file(COPY ${ORIGINAL_FILE_PATH5} DESTINATION ${COPIED_FILE_PATH})
